Switch to Rouge Highlighter
Use Rouge for syntax highlighting instead of Highlight (fixes #130).
Since Rouge is a Ruby gem, it offers better integration with Asciidoctor
and is more powerful than Highlight thanks to its lexers being Ruby code.

Drop the Sass sources folder `_assets_src/sass/` and use instead the
prebuilt docinfo from the ALAN Docs project, now found in the new
`_assets/rouge/` folder, along with other Rouge assets which can now
be updated via a Bash script that downloads these assets from ALAN Docs
using cURL.

Eliminate other unneeded Highlight assets, and update all the build
scripts and documentation accordingly.

--- a/extras_src/manual/StdLibMan0_intro.adoc
+++ b/extras_src/manual/StdLibMan0_intro.adoc
@@ -223,7 +223,7 @@ This section needs to be rewritten because thanks to syntax highlighting we no l
 (See link:https://github.com/AnssiR66/AlanStdLib/issues/86[Issue #86])
 
 * [ ] _StdLib Manual_ examples will adopt prose-casing.
-** [ ] Create new Highlight syntax for ALAN + StdLib, to highlight predefined library elements in a different color.
+** [ ] Create new Rouge syntax for ALAN + StdLib, to highlight predefined library elements in a different color.
 *** [ ] Update the text of this section accordingly.
 * [ ] _StdLib_ source excerpts will be shown in a darker theme, and with uppercase keywords (the library follows its own styling conventions).
 ================================
