Adopt Rake Toolchain
Switch to using Rake for all build tasks except Dia (closes #132).
Delete all previous toolchain related scripts (Bash and batch).
Update documentation accordingly.

--- a/extras_src/manual/StdLibMan.asciidoc
+++ b/extras_src/manual/StdLibMan.asciidoc
@@ -17,15 +17,16 @@
 :section-refsig: Sec.
 :appendix-refsig: App.
 // Misc Settings:
+:data-uri: true
 :experimental: true
 :icons: font
 :linkattrs: true
 :reproducible: true
 :sectanchors:
-// TEMP:
-:docinfodir: ../adoc
+// REPO ENV:
 :docinfo: shared-head
-
+:docinfodir: ../../_assets/rouge
+:imagesdir: ../../_assets/images
 // CUSTOM ATTRIBUTES DEFINITIONS:
 include::StdLibMan-inc_attributes.adoc[]
 
